--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 }
 #bigTitle{
     margin: auto;
-    font-family: "lucida Handwriting";
+    font-family: "lucida Handwriting", cursive;
     font-weight: bolder;
     font-size: 42px;
 }
